Specify the new API and rename domain entities
